assets/css/style.css
/* ... */
input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus,
input[type="search"]:focus {
    border-color: #1c71d8;
    box-shadow: 0 0 13px 0 #2263db66, 0 1px 3px rgb(0 0 0 / 10%), 0 5px 10px rgb(0 0 0 / 6%), 0 1px 0 0 #d7d7d7;
}

.store-results .card-content {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto auto;
    gap: 0px 0px;
    grid-template-areas:
        "title title"
        "description description"
        "labels actions";
    /* position: relative; */
    /* overflow: hidden; */
}

.store-results .card-content h3 {
    grid-area: title;
    display: flex;
    align-items: center;
    gap: 8px;
}

.store-results .card-content p {
    grid-area: description;
}

.store-results .card-content .tags {
    grid-area: labels;
    display: flex;
    align-items: center;
    flex-direction: row;
    gap: 5px;
}

.store-results .card-content .actions {
    grid-area: actions;
    display: flex;
    gap: 5px;
    align-items: center;
}

.store-results .card .card-bg {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-size: cover;
    background-position: 0 -10%;
    background-repeat: no-repeat;
    filter: blur(40px);
    opacity: .2;
    z-index: -1;
}

.message {
    border-radius: 4px;
    margin: 0 0 10px 0;
}

.card-content .actions a:hover {
    color: #1c71d8;
}

.feature-display.invert {
    flex-direction: row-reverse;
}

.feature-display.center {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    margin: 0 auto;
}

.feature-display.center .description {
    text-align: center;
    max-width: 700px;
    padding: 0;
}

.feature-display.has-icon>.mdi {
    font-size: 5em;
}

.feature-display.center .description h2 {
    justify-content: center;
}

.feature-display .description h2 .mdi {
    font-size: 1em;
}

.hero.yellow {
    background: #f2d6a9;
}

.hero.yellow .button {
    background-color: #7c6b50;
}

.hero.yellow .button:hover {
    background-color: #726349;
}

.hero.yellow .tag,
.hero.yellow .button:active,
.hero.yellow .button:focus {
    background-color: #685739;
}

.hero.blue {
    background: #c2d9eb;
}

.hero.blue .button {
    background-color: #52595e;
}

.hero.blue .button:hover {
    background-color: #4b5256;
}

.hero.blue .tag,
.hero.blue .button:active,
.hero.blue .button:focus {
    background-color: #3f464a;
}

.hero.orange {
    background: #f8bea8;
}

.hero.orange .button {
    background-color: #a17c6f;
}

.hero.orange .button:hover {
    background-color: #8f6d62;
}

.hero.orange .tag,
.hero.orange .button:active,
.hero.orange .button:focus {
    background-color: #7a5d53;
}

.hero.green {
    background: #c9e7c9;
}

.hero.green .button {
    background-color: #5b8e5b;
}

.hero.green .button:hover {
    background-color: #527a52;
}

.hero.green .tag,
.hero.green .button:active,
.hero.green .button:focus {
    background-color: #4a6e4a;
}

#toggle-menu {
    display: none;
}

.show-menu #toggle-menu {
    color: #1c71d8;
}

.grid-pics {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
}

.grid-pics img:hover {
    transform: scale(1.5);
    z-index: 1;
}

.splitter {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

.card.panel {
    padding: 1.8rem 2rem;
}

.card.panel p {
    line-height: 26px;
}

.card.panel h3 {
    margin: 0;
}

.panel.funding {
    background: #c2e9eb;
}

.panel.support {
    background-color: #ddc2eb;
}

.cookies-panel {
    position: fixed;
    bottom: 0;
    left: 0;
    background: #282c32;
    margin: 10px;
    border-radius: 4px;
}

.cookies-panel p {
    margin: 0;
}

.cookies-panel .container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
    padding: 10px 20px;
}

.cookies-panel .actions {
    display: flex;
}

.cookies-panel .actions .button {
    border: 0;
    cursor: pointer;
}

.cookies-panel,
.cookies-panel a,
.cookies-panel .link {
    color: #fff;
}

footer .grid {
    display: grid;
    text-align: initial;
    gap: 30px;
}

footer .grid.cols-4 {
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

footer section ul {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 7px;
}

footer section ul li {
    display: block;
}

footer section h4 {
    font-size: 21px;
    margin: 0;
}

footer section p {
    margin: 0 0 8px 0;
}

footer section {
    display: flex;
    gap: 20px;
    flex-direction: column;
}

hr {
    border: 0;
    border-top: 1px solid #d9d9d9;
}

hr.spacer {
    margin: 3rem 0;
}

.grid-pics.layout-1-2 {
    grid-template-columns: .8fr 1fr;
    grid-template-rows: repeat(2, 1fr);
}

.grid-pics.layout-1-2 img:first-child {
    grid-area: 1 / 1 / 3 / 2;
    max-height: 687px;
}

.grid-pics.layout-1-2 img:nth-child(2) {
    grid-area: 1 / 2 / 2 / 3;
}

.grid-pics.layout-1-2 img:nth-child(3) {
    grid-area: 2 / 2 / 3 / 3;
}

span.tag.grade-Gold {
    background-color: #f2edde;
    color: #8d7637;
    border: 1px solid #d3b352;
}

span.tag.grade-Silver {
    background-color: #cdcdcd;
    color: #000000;
    border: 1px solid #ababab;
}

span.tag.grade-Bronze {
    background-color: #dbbfa3;
    color: #442700;
    border: 1px solid #d79b4b;
}

span.tag.grade-Platinum {
    background-color: #ebebeb;
    color: #2a2a2a;
    border: 1px solid #c5c5c5;
}

.store .card {
    border: 1px solid #0000000f;
}

.filters {
    display: flex;
    justify-content: center;
    gap: 10px;
}

.filters span.tag {
    cursor: pointer;
}

.filters span.tag:not(.active) {
    opacity: 0.5;
}

.dropdown ul {
    display: none;
    position: absolute;
    z-index: 000;
    top: 28px;
    right: 0;
}

.dropdown.show ul {
    display: flex;
    flex-direction: column;
    gap: 5px;
    margin: 0;
    padding: 5px 0 0 0;
}

.dropdown {
    position: relative;
}

.store .card .dropdown {
    position: absolute;
    top: 18px;
    right: 20px;
}
/* ... */

